@@ -11,6 +11,5 @@ Tooltip_EN = {
     Tooltip_MoreTraits_AntiqueMag3 = "A limited edition magazine.<br>This edition offers commentary on the cannibalistic recipes of certain Papua New Guniea tribes.",
     Tooltip_MoreTraits_PapierMacheSword = "Fun for the whole family!<br>Not for children under the age of four.",
     Tooltip_MoreTraits_ItemBoost = "This item's stats are being boosted by one of your traits.",
-    Tooltip_MoreTraits_GordaniteBoost = "Crowbar+",
-    Tooltip_MoreTraits_GordaniteDefault = "Crowbar",
+    Tooltip_MoreTraits_BloodyItemBoost = "This crowbar has been shaped and refined to swing faster, deal more damage, and be fully effective in only one hand.<br>This item's stats are being boosted by one of your traits.",
 }
