@@ -90,6 +90,7 @@ UI_EN = {
     UI_trait_hardy = "Hardy",
     UI_trait_hardydesc = "Whether by force of will or physical fitness, you're not one to tire after long hours working.<br>Your maximum endurance is increased by 25%",
 	UI_trait_hardyendurance = "Hardy Endurance Left",
+	UI_trait_hardyrest = "Keep resting",
     UI_trait_drinker = "Alcoholic",
     UI_trait_drinkerdesc = "You have a dependence on alcohol. If you go too long without alcohol, you'll begin to feel stressed, then pain, and eventually withdrawal.<br>If you go through withdrawal, you will grow progressively more sick until you drink again or die. <br>You begin the game with one bottle of whiskey - better find more booze soon.",
     UI_trait_problunt = "Prowess: Blunt",
@@ -207,7 +208,8 @@ UI_EN = {
 	UI_trait_idealweight = "Ideal Weight",
 	UI_trait_idealweightdesc = "You like to keep your weight in check.<br>You gain 1.5x calories when under 78 weight.<br>You gain 0.75x calories when above 82 weight.",
 	UI_trait_quickrest = "Quick Rest",
-	UI_trait_quickrestdesc = "You recover endurance at a rapid pace while sitting.",
+	UI_trait_quickrestdesc = "Your endurance recovery while sitting is doubled.<br>You are informed if your endurance is max while sitting.",
+	UI_quickrestfullendurance = "Your endurance is full",
 	UI_MoreTraits_Options_ScroungerAnnounce = "Announce Scrounger and Incomprehensive",
     UI_MoreTraits_Options_ScroungerAnnounce_ToolTip = "If you have the Scrounger or Incomprehensive trait, you will be notified if item(s) are found or lost.",
     UI_MoreTraits_Options_ScroungerHighlight = "Highlight Scrounger Containers",
